# aumos-owasp-defenses

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
benchmarks/: __init__.py  bench_defense_throughput.py  bench_memory_usage.py  bench_pattern_latency.py  compare.py  conftest.py
docs/: UPGRADE_TO_AGENTSHIELD.md  architecture.md  index.md
examples/: 01_quickstart.py  02_asi01_to_asi05.py  03_asi06_to_asi10.py  04_owasp_guard_middleware.py  05_agent_scanner.py  06_drift_detection.py  07_langchain_owasp.py  README.md
src/aumos_owasp_defenses/: __init__.py  convenience.py
src/aumos_owasp_defenses/badge/: __init__.py  scanner_integration.py  svg_generator.py
src/aumos_owasp_defenses/certification/: __init__.py  badge.py  evaluator.py  levels.py
src/aumos_owasp_defenses/cli/: main.py
src/aumos_owasp_defenses/defenses/: __init__.py
src/aumos_owasp_defenses/defenses_suite/: __init__.py  defense_suite.py  detector.py  simulator.py
src/aumos_owasp_defenses/integration/: __init__.py  agentcore_bridge.py
src/aumos_owasp_defenses/metrics/: __init__.py  effectiveness.py
src/aumos_owasp_defenses/middleware/: __init__.py  crewai_guard.py  generic_guard.py  guard.py  (+1 more)
tests/: conftest.py  test_benchmarks.py  test_quickstart.py
tests/test_badge/: __init__.py  test_scanner_integration.py  test_svg_generator.py
tests/test_defenses_suite/: test_defense_suite.py  test_simulator.py
tests/test_metrics/: test_effectiveness.py
tests/test_scenarios/: test_library.py  test_scenario_runner.py
tests/unit/: test_asi01_boundary_detector.py  test_asi02_rate_limiter.py  test_asi02_schema_validator.py  test_asi03_capability_checker.py  test_asi04_vendor_verifier.py  test_asi05_scope_limiter.py  test_asi06_provenance_tracker.py  test_asi07_message_validator.py  test_asi08_circuit_breaker.py  test_asi09_trust_verifier.py  test_asi10_baseline_profiler.py  test_certification.py  test_middleware_guard.py  test_plugins_registry.py  test_report_generator.py  test_scanner.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts  types.ts
(+30 files in other folders)
